# cot-think-injection-monitoring

./: .env.example  .gitignore  CLAUDE.md  README.md  colab_launch.ipynb  component_resolution_final.ipynb  pyproject.toml
config/: cost.yaml  experiment.yaml  models.yaml
experiments/: example_full.yaml  example_h1.yaml  example_h2.yaml
scripts/: run_datagen.sh  run_pipeline.sh  run_remote.py
src/: __init__.py
src/attacks/: __init__.py  generate.py  length_control.py  templates.py  validate.py
src/data/: __init__.py  load_gpqa.py  load_mmlu.py  select_target.py
src/infra/: __init__.py  cache.py  cost.py  ledger.py  llm_client.py  matrix.py  paths.py  remote.py  retry.py  seed.py
src/judges/: __init__.py  faithfulness.py  monitor.py
src/metrics/: __init__.py  composites.py  core.py  dissociation.py
src/models/: __init__.py  parse.py  prefill.py  run_model.py
src/pipeline/: __init__.py  aggregate.py  baseline.py  run_experiment.py  stages.py
src/viz/: __init__.py  plots.py
tests/: test_cache.py  test_cost.py  test_experiment.py  test_generate.py  test_judges.py  test_length_control.py  test_matrix.py  test_metrics.py  test_parse.py  test_paths.py  test_seed.py  test_select_target.py  test_templates.py  test_validate.py
